--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="text-justify">
           Our world is full of identical objects (e.g., cans of coke, cars of same model).
           These duplicates, when seen together, provide additional and strong cues for us to effectively reason about 3D.
-          Inspired by this observation, we introduce Structure from Duplicates (SfD), a novel inverse graphics framework that reconstructs geometry,
+          Inspired by this observation, we introduce Structure from Duplicates (<b>SfD</b>), a novel inverse graphics framework that reconstructs geometry,
           material, and illumination from a single image containing multiple identical objects.
           SfD begins by identifying multiple instances of an object within an image,
           and then jointly estimates the 6DoF pose for all instances.An inverse graphics pipeline is subsequently employed to jointly reason about the shape,
@@ -362,12 +362,24 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h3>
-          Talk
+          Video
         </h3>
         <video width="960" height="540" controls>
           <source src="src/talk/1.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
+      </div>
+    </div> 
+
+    <div class="row" id="BibTeX">
+      <div class="col-md-10 col-md-offset-1">
+        <h3>BibTeX</h3>
+        <pre><code>@inproceedings{cheng2023structure,
+    title={Structure from Duplicates: Neural Inverse Graphics from a Pile of Objects},
+    author={Cheng, Tianhang and Ma, Wei-Chiu and Guan, Kaiyu and Torralba, Antonio and Wang, Shenlong},
+    booktitle={Thirty-seventh Conference on Neural Information Processing Systems},
+    year={2023}
+}</code></pre>
       </div>
     </div>
 
