--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h3>
-          Video
+          Video (with voice)
         </h3>
         <video width="960" height="540" controls>
           <source src="src/talk/1.mp4" type="video/mp4">
