--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h3>
-            Methods 
+            Poster
         </h3>
         <center>
-          <img src="./src/images/pipeline.png" class="img-responsive" alt="rendering" width="80%"
+          <img src="./src/images/poster.png" class="img-responsive" alt="rendering" width="80%"
             style="max-height: 450px;margin:auto;">
         </center>
         <div class="text-justify">
